@@ -992,70 +992,73 @@ class LibraryFunctions():
     def playlists( self ):
         audiolist = []
         videolist = []
-        paths = [['special://videoplaylists/','32004','VideoLibrary'], ['special://musicplaylists/','32005','MusicLibrary'], ["special://skin/playlists/",'32059',None], ["special://skin/extras/",'32059',None]]
+        paths = [['special://videoplaylists/','32004','VideoLibrary'], ['special://musicplaylists/','32005','MusicLibrary'], ["special://skin/playlists/",'32059',None], ["special://skin/extras/",'32059',None], ["special://skin/extras/playlists/",'32059',None]]
         for path in paths:
             count = 0
             if not xbmcvfs.exists(path[0]): continue
             for root, subdirs, files in kodiwalk( path[0], stringForce = "special://skin/" ):
                 for file in files:
-                    playlist = file['path']
-                    label = file['label']
-                    playlistfile = xbmc.translatePath( playlist ).decode('utf-8')
-                    mediaLibrary = path[2]
-                    
-                    if playlist.endswith( '.xsp' ):
-                        contents = xbmcvfs.File(playlistfile, 'r')
-                        contents_data = contents.read().decode('utf-8')
-                        xmldata = xmltree.fromstring(contents_data.encode('utf-8'))
-                        mediaType = "unknown"
-                        for line in xmldata.getiterator():
-                            if line.tag == "smartplaylist":
-                                mediaType = line.attrib['type']
-                                if mediaType == "movies" or mediaType == "tvshows" or mediaType == "seasons" or mediaType == "episodes" or mediaType == "musicvideos" or mediaType == "sets":
-                                    mediaLibrary = "VideoLibrary"
-                                    mediaContent = "video"
-                                elif mediaType == "albums" or mediaType == "artists" or mediaType == "songs":
-                                    mediaLibrary = "MusicLibrary"
-                                    if __xbmcversion__ >= 16:
-                                        mediaLibrary = "Music"
-                                    mediaContent = "music"
-                                
-                            if line.tag == "name" and mediaLibrary is not None:
-                                name = line.text
-                                if not name:
-                                    name = label
-                                # Create a list item
-                                listitem = self._create(["::PLAYLIST>%s::" %( mediaLibrary ), name, path[1], {"icon": "DefaultPlaylist.png"} ])
-                                listitem.setProperty( "action-play", "PlayMedia(" + playlist + ")" )
-                                listitem.setProperty( "action-show", "ActivateWindow(" + mediaLibrary + "," + playlist + ",return)".encode( 'utf-8' ) )
-                                listitem.setProperty( "action-party", "PlayerControl(PartyMode(%s))" %( playlist ) )
-
-                                # Add widget information
-                                listitem.setProperty( "widget", "Playlist" )
-                                listitem.setProperty( "widgetType", mediaType )
-                                listitem.setProperty( "widgetTarget", mediaContent )
-                                listitem.setProperty( "widgetName", name )
-                                listitem.setProperty( "widgetPath", playlist )
-                                
-                                if mediaLibrary == "VideoLibrary":
-                                    videolist.append( listitem )
-                                else:
-                                    audiolist.append( listitem )
-                                # Save it for the widgets list
-                                self.widgetPlaylistsList.append( [playlist, "(" + __language__( int( path[1] ) ) + ") " + name, name] )
-                                
-                                count += 1
-                                break
-
-                    elif playlist.endswith( '.m3u' ):
-                        name = label
-                        listitem = self._create( ["::PLAYLIST::", name, "32005", {"icon": "DefaultPlaylist.png"} ] )
-                        listitem.setProperty( "action-play", "PlayMedia(" + playlist + ")" )
-                        listitem.setProperty( "action-show", "ActivateWindow(MusicLibrary," + playlist + ",return)".encode( 'utf-8' ) )
+                    try:
+                        playlist = file['path']
+                        label = file['label']
+                        playlistfile = xbmc.translatePath( playlist ).decode('utf-8')
+                        mediaLibrary = path[2]
                         
-                        audiolist.append( listitem )
-                        
-                        count += 1
+                        if playlist.endswith( '.xsp' ):
+                            contents = xbmcvfs.File(playlistfile, 'r')
+                            contents_data = contents.read().decode('utf-8')
+                            xmldata = xmltree.fromstring(contents_data.encode('utf-8'))
+                            mediaType = "unknown"
+                            for line in xmldata.getiterator():
+                                if line.tag == "smartplaylist":
+                                    mediaType = line.attrib['type']
+                                    if mediaType == "movies" or mediaType == "tvshows" or mediaType == "seasons" or mediaType == "episodes" or mediaType == "musicvideos" or mediaType == "sets":
+                                        mediaLibrary = "VideoLibrary"
+                                        mediaContent = "video"
+                                    elif mediaType == "albums" or mediaType == "artists" or mediaType == "songs":
+                                        mediaLibrary = "MusicLibrary"
+                                        if __xbmcversion__ >= 16:
+                                            mediaLibrary = "Music"
+                                        mediaContent = "music"
+                                    
+                                if line.tag == "name" and mediaLibrary is not None:
+                                    name = line.text
+                                    if not name:
+                                        name = label
+                                    # Create a list item
+                                    listitem = self._create(["::PLAYLIST>%s::" %( mediaLibrary ), name, path[1], {"icon": "DefaultPlaylist.png"} ])
+                                    listitem.setProperty( "action-play", "PlayMedia(" + playlist + ")" )
+                                    listitem.setProperty( "action-show", "ActivateWindow(" + mediaLibrary + "," + playlist + ",return)".encode( 'utf-8' ) )
+                                    listitem.setProperty( "action-party", "PlayerControl(PartyMode(%s))" %( playlist ) )
+
+                                    # Add widget information
+                                    listitem.setProperty( "widget", "Playlist" )
+                                    listitem.setProperty( "widgetType", mediaType )
+                                    listitem.setProperty( "widgetTarget", mediaContent )
+                                    listitem.setProperty( "widgetName", name )
+                                    listitem.setProperty( "widgetPath", playlist )
+                                    
+                                    if mediaLibrary == "VideoLibrary":
+                                        videolist.append( listitem )
+                                    else:
+                                        audiolist.append( listitem )
+                                    # Save it for the widgets list
+                                    self.widgetPlaylistsList.append( [playlist, "(" + __language__( int( path[1] ) ) + ") " + name, name] )
+                                    
+                                    count += 1
+                                    break
+
+                        elif playlist.endswith( '.m3u' ):
+                            name = label
+                            listitem = self._create( ["::PLAYLIST::", name, "32005", {"icon": "DefaultPlaylist.png"} ] )
+                            listitem.setProperty( "action-play", "PlayMedia(" + playlist + ")" )
+                            listitem.setProperty( "action-show", "ActivateWindow(MusicLibrary," + playlist + ",return)".encode( 'utf-8' ) )
+                            
+                            audiolist.append( listitem )
+                            
+                            count += 1
+                    except:
+                        log( "Failed to load playlist: %s" %( file ) )
                         
             log( " - [" + path[0] + "] " + str( count ) + " playlists found" )
         
