@@ -2,6 +2,7 @@ v0.6.7
 - Enable 'Get More...' installation of widget providers
 - Return to using json to enable/disable Kodi debug logging
 - Jarvis shortcut changes
+- Load skin-playlists from skin://extras/playlists/
 - Cleanup
 
 v0.6.6
